--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,346 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
+  <title>Data Lovers</title>
+</head>
+<body>
+  <main>
+    <div class = "search">
+      <input type="text" placeholder="Qual carta você procura?">
+      <ul id = "listCards">
+        <li>
+          <img src = "imagens/0.jpg">
+          <span>O Louco</span>
+        </li>
+        <li>
+          <img src = "imagens/1.jpg">
+          <span>O Mago</span>
+        </li>
+        <li>
+          <img src = "imagens/2.jpg">
+          <span>A Sarcedotisa</span>
+        </li>
+        <li>
+          <img src = "imagens/3.jpg">
+          <span>A Imperatriz</span>
+        </li>
+        <li>
+          <img src = "imagens/4.jpg">
+          <span>O Imperador</span>
+        </li>
+        <li>
+          <img src = "imagens/5.jpg">
+          <span>O Papa</span>
+        </li>
+        <li>
+          <img src = "imagens/6.jpg">
+          <span>Os Enamorados</span>
+        </li>
+        <li>
+          <img src = "imagens/7.jpg">
+          <span>O carro</span>
+        </li>
+        <li>
+          <img src = "imagens/8.jpg">
+          <span>A Força</span>
+        </li>
+        <li>
+          <img src = "imagens/9.jpg">
+          <span>O Eremita</span>
+        </li>
+        <li>
+          <img src = "imagens/10.jpg">
+          <span>A Roda da Fortuna</span>
+        </li>
+        <li>
+          <img src = "imagens/11.jpg">
+          <span>A Justiça</span>
+        </li>
+        <li>
+          <img src = "imagens/12.jpg">
+          <span>O enforcado</span>
+        </li>
+        <li>
+          <img src = "imagens/13.jpg">
+          <span>A Morte</span>
+        </li>
+        <li>
+          <img src = "imagens/14.jpg">
+          <span>A Temperança</span>
+        </li>
+        <li>
+          <img src = "imagens/15.jpg">          
+          <span>O Diabo</span>
+        </li>
+        <li>
+          <img src = "imagens/16.jpg">         
+          <span>A Torre</span>
+        </li>
+        <li>
+          <img src = "imagens/17.jpg">          
+          <span>A Estrela</span>
+        </li>
+        <li>
+          <img src = "imagens/18.jpg">
+          <span>A Lua</span>
+        </li>
+        <li>
+          <img src = "imagens/19.jpg">
+          <span>O Sol</span>
+        </li>
+        <li>
+          <img src = "imagens/20.jpg">
+          <span>O Julgamento</span>
+        </li>
+        <li>
+          <img src = "imagens/21.jpg">
+          <span>O Mundo</span>
+        </li>
+        <li>
+          <img src = "imagens/asdecopas.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "imagens/0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "imagens/0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "imagens/0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+        <li>
+          <img src = "0.jpg">
+          <span></span>
+        </li>
+    </ul>
+    </div>
+  
+    <div id="root">
+      <h1>AUTO CONHECIMENTO PELAS CARTAS</h1>
+      <h3>Introdução ao Tarot</h3>
+
+    </div>
+  
+  </main>
+  <footer>
+  </footer>
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
