--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,340 +8,377 @@
   <link rel="stylesheet" href="style.css" />
   <title>Data Lovers</title>
 </head>
+
 <body>
   <main>
-    <div class = "search">
+    <section class="search">
       <input type="text" placeholder="Qual carta você procura?">
-      <ul id = "listCards">
+      <ul id="listCards">
         <li>
-          <img src = "imagens/0.jpg">
+          <img src="imagens/0.jpg">
           <span>O Louco</span>
         </li>
         <li>
-          <img src = "imagens/1.jpg">
+          <img src="imagens/1.jpg">
           <span>O Mago</span>
         </li>
         <li>
-          <img src = "imagens/2.jpg">
+          <img src="imagens/2.jpg">
           <span>A Sarcedotisa</span>
         </li>
         <li>
-          <img src = "imagens/3.jpg">
+          <img src="imagens/3.jpg">
           <span>A Imperatriz</span>
         </li>
         <li>
-          <img src = "imagens/4.jpg">
+          <img src="imagens/4.jpg">
           <span>O Imperador</span>
         </li>
         <li>
-          <img src = "imagens/5.jpg">
+          <img src="imagens/5.jpg">
           <span>O Papa</span>
         </li>
         <li>
-          <img src = "imagens/6.jpg">
+          <img src="imagens/6.jpg">
           <span>Os Enamorados</span>
         </li>
         <li>
-          <img src = "imagens/7.jpg">
+          <img src="imagens/7.jpg">
           <span>O carro</span>
         </li>
         <li>
-          <img src = "imagens/8.jpg">
+          <img src="imagens/8.jpg">
           <span>A Força</span>
         </li>
         <li>
-          <img src = "imagens/9.jpg">
+          <img src="imagens/9.jpg">
           <span>O Eremita</span>
         </li>
         <li>
-          <img src = "imagens/10.jpg">
+          <img src="imagens/10.jpg">
           <span>A Roda da Fortuna</span>
         </li>
         <li>
-          <img src = "imagens/11.jpg">
+          <img src="imagens/11.jpg">
           <span>A Justiça</span>
         </li>
         <li>
-          <img src = "imagens/12.jpg">
+          <img src="imagens/12.jpg">
           <span>O enforcado</span>
         </li>
         <li>
-          <img src = "imagens/13.jpg">
+          <img src="imagens/13.jpg">
           <span>A Morte</span>
         </li>
         <li>
-          <img src = "imagens/14.jpg">
+          <img src="imagens/14.jpg">
           <span>A Temperança</span>
         </li>
         <li>
-          <img src = "imagens/15.jpg">          
+          <img src="imagens/15.jpg">
           <span>O Diabo</span>
         </li>
         <li>
-          <img src = "imagens/16.jpg">         
+          <img src="imagens/16.jpg">
           <span>A Torre</span>
         </li>
         <li>
-          <img src = "imagens/17.jpg">          
+          <img src="imagens/17.jpg">
           <span>A Estrela</span>
         </li>
         <li>
-          <img src = "imagens/18.jpg">
+          <img src="imagens/18.jpg">
           <span>A Lua</span>
         </li>
         <li>
-          <img src = "imagens/19.jpg">
+          <img src="imagens/19.jpg">
           <span>O Sol</span>
         </li>
         <li>
-          <img src = "imagens/20.jpg">
+          <img src="imagens/20.jpg">
           <span>O Julgamento</span>
         </li>
         <li>
-          <img src = "imagens/21.jpg">
+          <img src="imagens/21.jpg">
           <span>O Mundo</span>
         </li>
         <li>
-          <img src = "imagens/asdecopas.jpg">
-          <span></span>
+          <img src="imagens/asdepaus.jpg">
+          <span>Ás de Paus</span>
         </li>
         <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
+          <img src="imagens/doisdp.jpg">
+          <span>Dois de Paus</span>
         </li>
         <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
+          <img src="imagens/tresdp.jpg">
+          <span>Tres de Paus</span>
         </li>
         <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
+          <img src="imagens/quatrodp.jpg">
+          <span>Quatro de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cincodp.jpg">
+          <span>Cinco de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/seisdp.jpg">
+          <span>Seis de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/setedp.jpg">
+          <span>Sete de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/oitodp.jpg">
+          <span>Oito de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/novedp.jpg">
+          <span>Nove de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/dezdp.jpg">
+          <span>Dez de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/valetedp.jpg">
+          <span>Valete de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cavaleirodp.jpg">
+          <span>Caveleiro de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/rainhadp.jpg">
+          <span>Rainha de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/reidp.jpg">
+          <span>Rei de Paus</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/asdeespadas.jpg">
+          <span>Ás de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/doisde.jpg">
+          <span>Dois de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/tresde.jpg">
+          <span>Tres de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/quatrode.jpg">
+          <span>Quatro de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cincode.jpg">
+          <span>Cinco de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/seisde.jpg">
+          <span>Seis de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/.setede.jpg">
+          <span>Sete de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/oitode.jpg">
+          <span>Oito de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/novede.jpg">
+          <span>Nove de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/dezde.jpg">
+          <span>Dez de ESpadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/valetede.jpg">
+          <span>Valete de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cavaleirode.jpg">
+          <span>Cavaleiro de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/rainhade.jpg">
+          <span>Rainha de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/reide.jpg">
+          <span>Rei de Espadas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/asdecopas.jpg">
+          <span>Ás de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/doisdc.jpg">
+          <span>Dois de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/tresdc.jpg">
+          <span>Tres de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/quatrodc.jpg">
+          <span>Quatro de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cincodc.jpg">
+          <span>Cinco de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/seisdc.jpg">
+          <span>Seis de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/setedc.jpg">
+          <span>Sete de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/oitodc.jpg">
+          <span>Oito de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/novedc.jpg">
+          <span>Nove de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/dezdc.jpg">
+          <span>Dez de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/valetedc.jpg">
+          <span>Valete de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cavaleirodc.jpg">
+          <span>Cavaleiro de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/rainhadc.jpg">
+          <span>Rainha de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/reidc.jpg">
+          <span>Rei de Copas</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/asdeouro.jpg">
+          <span>Ás de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/doisdo.jpg">
+          <span>Dois de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/tresdo.jpg">
+          <span>Tres de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/quatrodo.jpg">
+          <span>Quatro de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cincodo.jpg">
+          <span>Cinco de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/seisdo.jpg">
+          <span>Seis de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/setedo.jpg">
+          <span>Sete de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/oitodo.jpg">
+          <span>Oito de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/novedo.jpg">
+          <span>Nove de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/dezdo.jpg">
+          <span>Dez de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/valetedo.jpg">
+          <span>Valete de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/cavaleirodo.jpg">
+          <span>Cavaleiro de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/rainhado.jpg">
+          <span>Rainha de Ouro</span>
         </li>
         <li>
-          <img src = "0.jpg">
-          <span></span>
+          <img src="imagens/reido.jpg">
+          <span>Rei de Ouro</span>
         </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-    </ul>
-    </div>
-  
-    <div id="root">
-      <h1>AUTO CONHECIMENTO PELAS CARTAS</h1>
-      <h3>Introdução ao Tarot</h3>
+      </ul>
+    </section>
+    <nav>
+      <h4>Procure e saiba mais!</h4>
+      <h5>Arcanos Maiores</h5>
+        <ul>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
+          <li><a href="https://www.exemplo.com">O Louco</a></li>
 
+        </ul>
+    </nav>
+    <div id="root">
+      
+      <h1>Historia do Tarot</h1>
+      
+      <p><img src="imagens/Tarot.png" alt="Tarot" width="300" height="400"> 
+        O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
+        tenha sido usado principalmente para adivinhação ao longo dos séculos, perdendo suas características
+        originais,<br>
+        é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais, como
+        referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um<br> jogo para evitar
+        perseguição da igreja.<br>
+      </p>
+      <p>
+        O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot ressurgiu
+        em diferentes épocas, mantendo-se oculto e usado secretamente. É compreensível que pessoas <br>
+        sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a fundo
+        antes de tirar conclusões precipitadas. O Tarot é uma ferramenta rica para o autoconhecimento<br>
+        e convida à reflexão e experimentação.
+      </p>
     </div>
-  
   </main>
   <footer>
   </footer>
 
-    <script src="main.js" type="module"></script>
-  </body>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
