--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,340 +8,47 @@
   <link rel="stylesheet" href="style.css" />
   <title>Data Lovers</title>
 </head>
-<body>
-  <main>
-    <div class = "search">
-      <input type="text" placeholder="Qual carta você procura?">
-      <ul id = "listCards">
-        <li>
-          <img src = "imagens/0.jpg">
-          <span>O Louco</span>
-        </li>
-        <li>
-          <img src = "imagens/1.jpg">
-          <span>O Mago</span>
-        </li>
-        <li>
-          <img src = "imagens/2.jpg">
-          <span>A Sarcedotisa</span>
-        </li>
-        <li>
-          <img src = "imagens/3.jpg">
-          <span>A Imperatriz</span>
-        </li>
-        <li>
-          <img src = "imagens/4.jpg">
-          <span>O Imperador</span>
-        </li>
-        <li>
-          <img src = "imagens/5.jpg">
-          <span>O Papa</span>
-        </li>
-        <li>
-          <img src = "imagens/6.jpg">
-          <span>Os Enamorados</span>
-        </li>
-        <li>
-          <img src = "imagens/7.jpg">
-          <span>O carro</span>
-        </li>
-        <li>
-          <img src = "imagens/8.jpg">
-          <span>A Força</span>
-        </li>
-        <li>
-          <img src = "imagens/9.jpg">
-          <span>O Eremita</span>
-        </li>
-        <li>
-          <img src = "imagens/10.jpg">
-          <span>A Roda da Fortuna</span>
-        </li>
-        <li>
-          <img src = "imagens/11.jpg">
-          <span>A Justiça</span>
-        </li>
-        <li>
-          <img src = "imagens/12.jpg">
-          <span>O enforcado</span>
-        </li>
-        <li>
-          <img src = "imagens/13.jpg">
-          <span>A Morte</span>
-        </li>
-        <li>
-          <img src = "imagens/14.jpg">
-          <span>A Temperança</span>
-        </li>
-        <li>
-          <img src = "imagens/15.jpg">          
-          <span>O Diabo</span>
-        </li>
-        <li>
-          <img src = "imagens/16.jpg">         
-          <span>A Torre</span>
-        </li>
-        <li>
-          <img src = "imagens/17.jpg">          
-          <span>A Estrela</span>
-        </li>
-        <li>
-          <img src = "imagens/18.jpg">
-          <span>A Lua</span>
-        </li>
-        <li>
-          <img src = "imagens/19.jpg">
-          <span>O Sol</span>
-        </li>
-        <li>
-          <img src = "imagens/20.jpg">
-          <span>O Julgamento</span>
-        </li>
-        <li>
-          <img src = "imagens/21.jpg">
-          <span>O Mundo</span>
-        </li>
-        <li>
-          <img src = "imagens/asdecopas.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "imagens/0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-        <li>
-          <img src = "0.jpg">
-          <span></span>
-        </li>
-    </ul>
-    </div>
-  
-    <div id="root">
-      <h1>AUTO CONHECIMENTO PELAS CARTAS</h1>
-      <h3>Introdução ao Tarot</h3>
 
+<body>
+  <section class="search">
+    <input type="text" placeholder="Qual carta você procura?">
+
+    <input type="checkbox" id="check" class="chec">
+    <label for="check" class="imgmenu">
+      <img src="tarotimag/menu-icon-13.png" class="menu">
+    </label>
+
+    <nav class="filtro01">
+      <ul class="lista">
+        <li><a href="" class="arcanos">Arcanos maiores</a></li>
+        <li><a href="" class="arcanos">Arcanos menores</a></li>
+      </ul>
+    </nav>
+  </section>
+  <div class="content">
+    <img src="tarotimag/anara.jpg" alt="Imagem" class="imgbruxa">
+    <img src="tarotimag/dara.jpg" alt="Imagem" class="imgbruxa1">
+
+    <div>
+      <h1>Historia do Tarot</h1>
+      
+      <p>
+        O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
+        tenha sido usado principalmente para adivinhação ao longo dos séculos, perdendo suas características
+        originais, é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais, como
+        referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um jogo para evitar
+        perseguição da igreja.
+      </p>
+      
+      <p>
+        O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot ressurgiu
+        em diferentes épocas, mantendo-se oculto e usado secretamente. É compreensível que pessoas sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a fundo antes de tirar conclusões precipitadas. O Tarot é uma ferramenta rica para o autoconhecimento e convida à reflexão e experimentação.
+      </p>
     </div>
-  
-  </main>
+  </div>
   <footer>
   </footer>
 
-    <script src="main.js" type="module"></script>
-  </body>
+  <script src="main.js" type="module"></script>
+</body>
 </html>
