some changes - gabe note commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -13,30 +13,42 @@
   <main>
     <section class="search">
       <input type="text" placeholder="Qual carta você procura?">
+      <ul id="listCards">
+      </ul>
     </section>
-    <nav>
-      <h4>Procure e saiba mais!</h4>
-      <h5>Arcanos Maiores</h5>
-       
-    </nav>
-    <div id="root">
-      
+    <section>
+      <input type="checkbox" id="check" class="chec">
+      <label for="check" class="imgmenu">
+        <img src="imagens/menu.jfif" class="menu">
+      </label>
+      <nav class="filtro01">
+        <ul class="lista">
+          <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
+          <li><a href="index2.html" class="bigger">Arcanos maiores</a></li>
+          <li><a href="index2.html" class="minors">Arcanos menores</a></li>
+        </ul>
+      </nav>
+    </section>
+    <div>
       <h1>Historia do Tarot</h1>
-      <a href="index2.html">clique aqui</a>
-      <p> 
+      <p>
         O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
         tenha sido usado principalmente para adivinhação ao longo dos séculos, perdendo suas características
         originais,<br>
-        é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais, como
-        referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um<br> jogo para evitar
+        é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais,
+        como
+        referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um<br> jogo para
+        evitar
         perseguição da igreja.<br>
       </p>
       <p>
-        O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot ressurgiu
+        O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot
+        ressurgiu
         em diferentes épocas, mantendo-se oculto e usado secretamente. É compreensível que pessoas <br>
-        sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a fundo
+        sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a
+        fundo
         antes de tirar conclusões precipitadas. O Tarot é uma ferramenta rica para o autoconhecimento<br>
-        e convida à reflexão e experimentação. 
+        e convida à reflexão e experimentação.
       </p>
     </div>
   </main>
