--- a/src/index2.html
+++ b/src/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -16,10 +16,23 @@
       <ul id="listCards">
       </ul>
     </section>
-    <nav>
-      <h4>Procure e saiba mais!</h4>
-      <h5>Arcanos Maiorsdfadsfaf  npm runes</h5>
-    </nav>
+    <section>
+      <input type="checkbox" id="check" class="chec">
+      <label for="check" class="imgmenu">
+        <img src="imagens/menu.jfif" class="menu">
+      </label>
+      <nav class="filtro01">
+        <ul class="lista">
+          <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
+          <li><a href="index2.html" class="arcanos">Arcanos maiores</a></li>
+          <li><a href="index2.html" class="arcanos">Arcanos menores</a></li>
+        </ul>
+      </nav>
+      <div>
+        <ul id="cards-major"></ul>
+        <ul id="cards-minors"></ul>
+      </div>
+    </section>
   </main>
   <footer>
   </footer>
