cartas flip e printada na tela

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
       <nav class="filtro01">
         <ul class="lista">
           <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
-          <li><a href="maiores.html" class="bigger">Arcanos maiores</a></li>
-          <li><a href="menores.html" class="minors">Arcanos menores</a></li>
+          <li><a href="cards.html" class="bigger">Arcanos maiores</a></li>
+          <li><a href="cards.html" class="minors">Arcanos menores</a></li>
         </ul>
        
       </nav>
