ajustes inicio da implatação do filtro

--- a/src/cards.html
+++ b/src/cards.html
@@ -24,8 +24,13 @@
       <nav class="filtro01">
         <ul class="lista">
           <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
-          <li><a href="cards.html" class="bigger">Arcanos maiores</a></li>
-          <li><a href="cards.html" class="minors">Arcanos menores</a></li>
+          <li><a href="cards.html?type=maior?type=menor" class="cardall">Todas as Cartas</a></li>
+          <li><a href="cards.html?type=maior" class="bigger">Arcanos maiores</a></li>
+          <li><a href="cards.html?type=menor" class="minors">Arcanos menores</a></li>
+          <li><a href="cards.html?suit=copas" class="copas">Baralho de copas</a></li>
+          <li><a href="cards.html?suit=ouros" class="ouros">Baralho de Ouros</a></li>
+          <li><a href="cards.html?suit=paus" class="paus">Baralho de Paus</a></li>
+          <li><a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a></li>
         </ul>
           
         </ul>
