--- a/src/cards.html
+++ b/src/cards.html
@@ -23,7 +23,7 @@
       </label>jpg
       <nav class="filtro01">
         <ul class="lista">
-          <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
+          <li><a href="index.html" class="home-page">Introdução</a></li>
           <li><a href="cards.html?type=all" class="cardall">Baralho</a></li>
           <li><a href="cards.html?type=maior" class="bigger">Arcanos maiores</a></li>
           <li><a href="cards.html?type=menor" class="minors">Arcanos menores</a></li>
