--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,16 @@
       </label>
       <nav class="filtro01">
         <ul class="lista">
-          <li><a href="index.html" class="home-page">Pagina Inicial</a></li>
-          <li><a href="cards.html?type=maior?type=menor" class="cardall">Todas as Cartas</a></li>
+          <li><a href="index.html" class="home-page">Introdução</a></li>
+          <li><a href="cards.html?type=all" class="cardall">Baralho</a></li>
           <li><a href="cards.html?type=maior" class="bigger">Arcanos maiores</a></li>
           <li><a href="cards.html?type=menor" class="minors">Arcanos menores</a></li>
-          <li><a href="cards.html?suit=copas" class="copas active">Baralho de copas</a></li>
-          <li><a href="cards.html?suit=ouros" class="ouros">Baralho de Ouros</a></li>
-          <li><a href="cards.html?suit=paus" class="paus">Baralho de Paus</a></li>
+          <li><a href="cards.html?suit=copas" class="copas">Baralho de copas</a></li>
+          <li><a href="cards.html?suit=ouros" class="ouros">Baralho de ouros</a></li>
+          <li><a href="cards.html?suit=paus" class="paus">Baralho de paus</a></li>
           <li><a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a></li>
-
+          <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
+          <li><a href="cards.html?name" class="ordz">ordenação Z-A</a></li>
          
 
         </ul>
