--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <input type="checkbox" id="check" class="chec">
       <label for="check" class="imgmenu">
         <img src="tarotimag/cristal.jpg" class="menu">
+        <h2 class="menutext">Menu</h2>
       </label>
       <nav class="filtro01">
         <ul class="lista">
@@ -41,6 +42,7 @@
 
     </section>
     <div class="content">
+      <img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot">
       <h1>Historia do Tarot</h1>
       <p>
         O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
