--- a/src/cards.html
+++ b/src/cards.html
@@ -39,8 +39,12 @@
 
       </nav>
       <div id="filterInfo" class="filter-info"></div>
+     <div>
+      <h1 id="filterTitle" class="titulo"></h1>
 
       <div id="cardContainer" class="card-container">
+
+      </div>
       </div>
 
     </section>
