--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <section class="search">
-      <input type="text" placeholder="Qual carta você procura?">
+      <input id="pesquisa" type="text" placeholder="Qual carta você procura?">
       <ul id="listCards">
       </ul>
     </section>
@@ -42,27 +42,31 @@
 
     </section>
     <div class="content">
-      <img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot">
-      <h1>Historia do Tarot</h1>
-      <p>
-        O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
-        tenha sido usado principalmente para adivinhação ao longo dos séculos, perdendo suas características
-        originais,<br>
-        é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais,
-        como
-        referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um<br> jogo para
-        evitar
-        perseguição da igreja.<br>
-      </p>
-      <p>
-        O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot
-        ressurgiu
-        em diferentes épocas, mantendo-se oculto e usado secretamente. É compreensível que pessoas <br>
-        sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a
-        fundo
-        antes de tirar conclusões precipitadas. O Tarot é uma ferramenta rica para o autoconhecimento<br>
-        e convida à reflexão e experimentação.
-      </p>
+      <div class="img">
+        <!--<img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot"> -->
+      </div>
+      <div class="text">
+        <h1>Historia do Tarot</h1>
+        <p>
+          O <strong>Tarot</strong> é um sistema antigo que reflete a experiência humana através de arquétipos. Embora
+          tenha sido usado principalmente para adivinhação ao longo dos séculos, perdendo suas características
+          originais,<br>
+          é importante resgatar seu simbolismo e entender seu potencial. O Tarot possui raízes culturais ancestrais,
+          como
+          referências egípcias e da Grécia antiga. Na Europa medieval, o Tarot foi disfarçado como um<br> jogo para
+          evitar
+          perseguição da igreja.<br>
+        </p>
+        <p>
+          O baralho tradicional que conhecemos hoje é uma versão simplificada do Tarot. Historicamente, o Tarot
+          ressurgiu
+          em diferentes épocas, mantendo-se oculto e usado secretamente. É compreensível que pessoas <br>
+          sem contato prévio com o Tarot possam ter dúvidas sobre seu significado, mas é importante explorar mais a
+          fundo
+          antes de tirar conclusões precipitadas. O Tarot é uma ferramenta rica para o autoconhecimento<br>
+          e convida à reflexão e experimentação.
+        </p>
+      </div> 
     </div>
   </main>
   <footer>
