separação do codigo para pastas js e inicio do teste

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,11 @@
     </div>
   </main>
   <footer>
+    <div class="display"></div>
+    <div class="displaytext">
+      <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
+      <h3>Desenvolvido pelas graduandas</h3>
+    </div>
   </footer>
 
   <script src="main.js" type="module"></script>
