--- a/src/cards.html
+++ b/src/cards.html
@@ -37,7 +37,13 @@
       <p id="filterPercentage"></p>
       <div id="cardContainer" class="card-container"></div>
     </div>
-  <footer></footer>
+    <footer>
+      <div class="display"></div>
+      <div class="displaytext">
+        <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
+        <h3>Desenvolvido pelas graduandas</h3>
+      </div>
+    </footer>
   <script src="main.js" type="module"></script>
 </body>
 </html>
