teste de responsividade, css.

--- a/src/cards.html
+++ b/src/cards.html
@@ -9,15 +9,10 @@
   </head>
   <body>
     <main>
-      <section class="search">
-        <input type="text" placeholder="Qual carta você procura?" />
-        <ul id="listCards"></ul>
-      </section>
-      <section>
+      <section class="cards_pages">
         <input type="checkbox" id="check" class="chec" />
         <label for="check" class="imgmenu">
-          <img src="tarotimag/cristal.jpg" class="menu" /> </label
-        >jpg
+          <img src="tarotimag/cristal.jpg" class="menu" /> </label>
         <nav class="filtro01">
           <ul class="lista">
             <li><a href="index.html" class="home-page">Introdução</a></li>
