--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,10 @@
 
   <body>
     <main>
-      <section class="search">
-        <input
-          id="pesquisa"
-          type="text"
-          placeholder="Qual carta você procura?"
-        />
-        <ul id="listCards"></ul>
-      </section>
-      <section>
+      <section class="menu_link">
         <input type="checkbox" id="check" class="chec" />
         <label for="check" class="imgmenu">
           <img src="tarotimag/cristal.jpg" class="menu" />
-          <h2 class="menutext">Menu</h2>
         </label>
         <nav class="filtro01">
           <ul class="lista">
@@ -44,9 +35,7 @@
               <a href="cards.html?suit=paus" class="paus">Baralho de paus</a>
             </li>
             <li>
-              <a href="cards.html?suit=espadas" class="espadas"
-                >Baralho de Espadas</a
-              >
+              <a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a>
             </li>
             <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
             <li><a href="cards.html?name" class="orda">ordenação Z-A</a></li>
