ajustes filtro e ordenazão

--- a/src/cards.html
+++ b/src/cards.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section class="search">
-    <input type="text" placeholder="Qual carta você procura?">
+    <input type="text" id="cardSearchInput" placeholder="Qual carta você procura?">
     <ul id="listCards"></ul>
   </section>
   <section>
@@ -42,6 +42,20 @@
       <div class="displaytext">
         <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
         <h3>Desenvolvido pelas graduandas</h3>
+      </div>
+      <div class="container">
+        <div class="div-anara">
+      <img src="tarotimag/anara.jpg" class="bruxa">
+        <p class="anara">Anara Martins</p>
+        <img src="tarotimag/github.png" class="imgit">
+        <img src="tarotimag/LinkedIn.png" class="imglinkedin">
+         </div>
+         <div class="div-dara">
+          <img src="tarotimag/dara.jpg" class="bruxa1">
+          <p class="dara">Dara Nunes</p>
+          <img src="tarotimag/github.png" class="imgit1">
+          <img src="tarotimag/LinkedIn.png" class="imglinkedin1">
+         </div>
       </div>
     </footer>
   <script src="main.js" type="module"></script>
