--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <section class="search">
-      <input type="text" placeholder="Qual carta você procura?">
+      <input type="text" id="cardSearchInput" placeholder="Qual carta você procura?">
       <ul id="listCards"></ul>
     </section>
     <section>
@@ -58,6 +58,7 @@
         </div>
           </main>
           <footer>
+           
           </footer>
           <script src="main.js" type="module"></script>
         </body>
