spec teste com erro mocha

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
             <li>
               <a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a>
             </li>
-            <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
-            <li><a href="cards.html?name" class="orda">ordenação Z-A</a></li>
+            <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
+            <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
           </ul>
         </nav>
       </section>
