--- a/src/cards.html
+++ b/src/cards.html
@@ -34,11 +34,10 @@
             </li>
             <li>
               <a href="cards.html?suit=espadas" class="espadas"
-                >Baralho de Espadas</a
-              >
+                >Baralho de Espadas</a>
             </li>
-            <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
-            <li><a href="cards.html?name" class="ordz">ordenação Z-A</a></li>
+            <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
+            <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
           </ul>
         </nav>
         <div id="filterInfo" class="filter-info"></div>
