--- a/src/cards.html
+++ b/src/cards.html
@@ -37,10 +37,14 @@
                 >Baralho de Espadas</a
               >
             </li>
-            <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
-            <li><a href="cards.html?name" class="ordz">ordenação Z-A</a></li>
+            <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
+            <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
           </ul>
         </nav>
+
+        <div class="search">
+          <input type="text" id="cardSearchInput" placeholder="Qual carta você procura?">
+        </div>
         <div id="filterInfo" class="filter-info"></div>
         <div>
           <h1 id="filterTitle" class="titulo"></h1>
