--- a/src/cards.html
+++ b/src/cards.html
@@ -43,6 +43,7 @@
         <div id="filterInfo" class="filter-info"></div>
         <div>
           <h1 id="filterTitle" class="titulo"></h1>
+          <h1 class="percentage"></h1>
           <div id="cardContainer" class="card-container"></div>
         </div>
       </section>
