--- a/src/cards.html
+++ b/src/cards.html
@@ -48,6 +48,8 @@
         <div id="filterInfo" class="filter-info"></div>
         <div>
           <h1 id="filterTitle" class="titulo"></h1>
+          <div id="percentageContainer"></div>
+
           <div id="cardContainer" class="card-container"></div>
         </div>
       </section>
