ordened by alphabet complete

--- a/src/index.html
+++ b/src/index.html
@@ -18,24 +18,24 @@
         <nav class="filtro01">
           <ul class="lista">
             <li><a href="index.html" class="home-page">Introdução</a></li>
-            <li><a href="cards.html?type=all" class="cardall">Baralho</a></li>
+            <li><a href="cards.html?type=all&sort=none" class="cardall">Baralho</a></li>
             <li>
-              <a href="cards.html?type=maior" class="bigger">Arcanos maiores</a>
+              <a href="cards.html?type=maior&sort=none" class="bigger">Arcanos maiores</a>
             </li>
             <li>
-              <a href="cards.html?type=menor" class="minors">Arcanos menores</a>
+              <a href="cards.html?type=menor&sort=none" class="minors">Arcanos menores</a>
             </li>
             <li>
-              <a href="cards.html?suit=copas" class="copas">Baralho de copas</a>
+              <a href="cards.html?suit=copas&sort=none" class="copas">Baralho de copas</a>
             </li>
             <li>
-              <a href="cards.html?suit=ouros" class="ouros">Baralho de ouros</a>
+              <a href="cards.html?suit=ouros&sort=none" class="ouros">Baralho de ouros</a>
             </li>
             <li>
-              <a href="cards.html?suit=paus" class="paus">Baralho de paus</a>
+              <a href="cards.html?suit=paus&sort=none" class="paus">Baralho de paus</a>
             </li>
             <li>
-              <a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a>
+              <a href="cards.html?suit=espadas&sort=none" class="espadas">Baralho de Espadas</a>
             </li>
             <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
             <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
