--- a/src/cards.html
+++ b/src/cards.html
@@ -48,7 +48,7 @@
         <div id="filterInfo" class="filter-info"></div>
         <div>
           <h1 id="filterTitle" class="titulo"></h1>
-          <div id="percentageContainer"></div>
+          <div class="porcentage">Possui um total de <span id="porcentageContainer"></span></div>  
 
           <div id="cardContainer" class="card-container"></div>
         </div>
