--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
             <li>
               <a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a>
             </li>
-            <li><a href="cards.html?name" class="orda">ordenação A-Z</a></li>
-            <li><a href="cards.html?name" class="orda">ordenação Z-A</a></li>
+            <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
+            <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
           </ul>
         </nav>
       </section>
@@ -73,14 +73,7 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="display"></div>
-      <div class="displaytext">
-        <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
-        <h3>Desenvolvido pelas graduandas</h3>
-      </div>
-    </footer>
-
+    
     <script src="main.js" type="module"></script>
   </body>
 </html>
