--- a/src/index.html
+++ b/src/index.html
@@ -18,24 +18,24 @@
         <nav class="filtro01">
           <ul class="lista">
             <li><a href="index.html" class="home-page">Introdução</a></li>
-            <li><a href="cards.html?type=all" class="cardall">Baralho</a></li>
+            <li><a href="cards.html?type=all&sort=none" class="cardall">Baralho</a></li>
             <li>
-              <a href="cards.html?type=maior" class="bigger">Arcanos maiores</a>
+              <a href="cards.html?type=maior&sort=none" class="bigger">Arcanos maiores</a>
             </li>
             <li>
-              <a href="cards.html?type=menor" class="minors">Arcanos menores</a>
+              <a href="cards.html?type=menor&sort=none" class="minors">Arcanos menores</a>
             </li>
             <li>
-              <a href="cards.html?suit=copas" class="copas">Baralho de copas</a>
+              <a href="cards.html?suit=copas&sort=none" class="copas">Baralho de copas</a>
             </li>
             <li>
-              <a href="cards.html?suit=ouros" class="ouros">Baralho de ouros</a>
+              <a href="cards.html?suit=ouros&sort=none" class="ouros">Baralho de ouros</a>
             </li>
             <li>
-              <a href="cards.html?suit=paus" class="paus">Baralho de paus</a>
+              <a href="cards.html?suit=paus&sort=none" class="paus">Baralho de paus</a>
             </li>
             <li>
-              <a href="cards.html?suit=espadas" class="espadas">Baralho de Espadas</a>
+              <a href="cards.html?suit=espadas&sort=none" class="espadas">Baralho de Espadas</a>
             </li>
             <li><a href="cards.html?sort=name-asc" class="orda">ordenação A-Z</a></li>
             <li><a href="cards.html?sort=name-desc" class="ordz">ordenação Z-A</a></li>
@@ -44,7 +44,7 @@
       </section>
       <div class="content">
         <div class="img">
-          <!--<img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot"> -->
+          <img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot">
         </div>
         <div class="text">
           <h1>Historia do Tarot</h1>
@@ -73,7 +73,14 @@
         </div>
       </div>
     </main>
-    
+    <footer>
+      <div class="display"></div>
+      <div class="displaytext">
+        <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
+        <h3>Desenvolvido pelas graduandas</h3>
+      </div>
+    </footer>
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
