teste não esta finalizado.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       </section>
       <div class="content">
         <div class="img">
-          <!--<img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot"> -->
+          <img src="tarotimag/cartas.png" class="imgcartas" alt="imagem-cartas-tarot">
         </div>
         <div class="text">
           <h1>Historia do Tarot</h1>
