ajustes na responsavidade

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="introdução.css">
     <title>Data Lovers</title>
   </head>
+  
 
   <body>
     <main>
+      
       <section class="menu_link">
         <input type="checkbox" id="check" class="chec" />
         <label for="check" class="imgmenu">
@@ -74,13 +77,7 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="display"></div>
-      <div class="displaytext">
-        <h2>Projeto proposto pelo Bootcamp Laboratoria</h2>
-        <h3>Desenvolvido pelas graduandas</h3>
-      </div>
-    </footer>
+    
 
     <script src="main.js" type="module"></script>
   </body>
